Add _iOS scheme

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ xcode_project: SimpleAssetPicker.xcodeproj
 matrix:
   include:
     - xcode_sdk: iphonesimulator
-      xcode_scheme: SimpleAssetPicker
+      xcode_scheme: SimpleAssetPicker_iOS
