--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: objective-c
 
+osx_image: xcode7.3
+
 branches:
  only:
  - master
 
-before_install:
- - pod install
+install: make get-deps
