--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,12 @@ branches:
  only:
  - master
 
-install: make get-deps
+# install: make get-deps
+
+before_install:
+ - gem install cocoapods # Since Travis is not always on latest version
+ - pod install
+
+script:
+- set -o pipefail && xcodebuild test -workspace ${POD_NAME}.xcworkspace -scheme ${POD_NAME} -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
+- pod lib lint
