--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,5 @@ before_install:
  - pod install
 
 script:
-- set -o pipefail && xcodebuild test -workspace ${POD_NAME}.xcworkspace -scheme ${POD_NAME} -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild -workspace ${POD_NAME}.xcworkspace -scheme ${POD_NAME} -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
