--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,5 @@ before_install:
  - pod install
 
 script:
-- set -o pipefail && xcodebuild -workspace SimpleAssetPicker.xcworkspace -scheme Pods-SimpleAssetPicker ONLY_ACTIVE_ARCH=NO
+- set -o pipefail && xcodebuild -workspace SimpleAssetPicker.xcworkspace -scheme SimpleAssetPicker ONLY_ACTIVE_ARCH=NO CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
 - pod lib lint
